--- a/SpringbooWartDemo2/src/main/resources/application.properties
+++ b/SpringbooWartDemo2/src/main/resources/application.properties
@@ -1,2 +1,11 @@
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+
+spring.profiles.active=prd
+
+##mysql
+spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.username=root
+spring.datasource.password=123456
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
