--- a/SpringbooWartDemo2/src/main/resources/application.properties
+++ b/SpringbooWartDemo2/src/main/resources/application.properties
@@ -4,8 +4,18 @@ spring.mvc.view.suffix=.jsp
 spring.profiles.active=prd
 
 ##mysql
-spring.datasource.url=jdbc:mysql://localhost:3306/test
-spring.datasource.username=root
-spring.datasource.password=123456
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/test
+#spring.datasource.username=root
+#spring.datasource.password=123456
+#spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
+###datasource1
+spring.datasource.test1.driver-class-name = com.mysql.jdbc.Driver   
+spring.datasource.test1.jdbc-url = jdbc:mysql://localhost:3306/test?useUnicode=true&characterEncoding=utf-8
+spring.datasource.test1.username = root
+spring.datasource.test1.password = 123456
+###datasource2
+spring.datasource.test2.driver-class-name = com.mysql.jdbc.Driver
+spring.datasource.test2.jdbc-url = jdbc:mysql://localhost:3306/test2?useUnicode=true&characterEncoding=utf-8
+spring.datasource.test2.username = root
+spring.datasource.test2.password = 123456
